# parking

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.api  Dockerfile.embedded  README.md  main.cpp
api/: requirements.txt
api/app/: FrameBuffer.py  FrameDispatcher.py  dependencies.py  logger.py  main.py  models.py  runtime.py  state.py  watchdog.py
api/app/routers/: metrics.py  parking.py  system.py
api/tests/: config.json  conftest.py  test_metrics.py  test_process.py  test_render.py  test_stats.py
api/tests/integration/: helpers.py  test_camera_failures.py  test_camera_lifecycle.py  test_multicam_isolation.py  test_stress_multicam.py  test_stress_single_camera.py
api/tests/load/: test_burst.py  test_high_frequency.py
api/tests/system/: fakers.py  test_watchdog.py
api/tests/unit/: fakers.py  helpers.py  test_metrics.py  test_parking.py  test_system.py
bindings/: CMakeLists.txt  Parking.cpp  parking_bindings.cpp
core/: CMakeLists.txt  README.md
core/include/smart_parking/: Aligner.h  CameraState.h  Frame.h  HeavyEstimator.h  LightVision.h  LightVisionData.h  Logger.h  Parking.h  ParkingPlace.h  ParkingSystem.h  PlaceState.h  RenderPlace.h  RenderSnapshot.h  Renderer.h  StateManager.h  utils.h
core/src/: Aligner.cpp  HeavyEstimator.cpp  LightVision.cpp  Parking.cpp  ParkingPlace.cpp  ParkingSystem.cpp  Renderer.cpp  StateManager.cpp  utils.cpp
embedded/: CMakeLists.txt  README.md  main.cpp
embedded/include/: Renderer.h  utils.h
embedded/src/: Renderer.cpp  utils.cpp
header/: Parking.h  ParkingPlace.h  utils.h
scripts/: demo.py  script_test_restart.sh
smart_parking_env/: pyvenv.cfg
src/: Parking.cpp  ParkingPlace.cpp  utils.cpp
tests/: CMakeLists.txt  test_parking.cpp  test_parking_place.cpp  test_utils.cpp
tests/data/: invalid_json.json  missing_parking_places.json  valid_parking.json
